# CandCPPpractices

./: .gitignore  README.md
data-structure-course-exercises/: LinkList.cpp  SeqList.cpp  static_link_reverse.cpp
freshman-c-course-exercises/c-training-adas/: .gitignore  clean_rubbish_keep_vscode.bat
freshman-c-course-exercises/c-training-adas - plus/: CMakeLists.txt  README.md
freshman-c-course-exercises/c-training-adas - plus/include/: Action.h  Direction.h  Executor.h  Pose.h  State.h
freshman-c-course-exercises/c-training-adas - plus/src/: Action.c  Executor.c
freshman-c-course-exercises/c-training-adas - plus/tests/: ExcutorFastTest.cc  ExecutorTest.cc
freshman-c-course-exercises/c-training-adas/include/: Executor.h
freshman-c-course-exercises/c-training-adas/src/: CMakeLists.txt
freshman-c-course-exercises/c-training-adas/tests/: ExcutorFastTest.cc
freshman-c-course-exercises/experiment-version1/: CMakeLists.txt
freshman-c-course-exercises/experiment-version1/src/: CMakeLists.txt  Executor.c
freshman-c-course-exercises/personal small practices/: 1.c  2.c  test.c  test.cpp  未命名1.c
freshman-c-course-exercises/practices from the SSE system/: 10.1 1.c  10.11 1.c  10.11 2.c  10.2 1.c  10.2 2.c  10.2 3.c  10.20 1.c  10.29 1.c  10.29 2杨辉三角.c  10.31 1q6588.c  10.31 2q6563.c  10.5 1.c  10.5 2.c  10.7 1.c  10.8 1.c  11.12 q2427.c  11.5 1 q196.c  11.5 1q6425.c  11.5 3q3023.c  12 16 1.c  12 16 2.c  12 20test2.c  9.23 2.c  9.23-1  9.23-1.c  9.29 1.c  9.29 2.c  9.c  talk.c  talk2.c  talkdevc.c  test wh.c
(+24 files in other folders)
