SET(INCLUDE ${CMAKE_SOURCE_DIR}/include ${CMAKE_SOURCE_DIR}/src)
FILE(GLOB_RECURSE SOURCE "*.c")
LIST(REMOVE_ITEM SOURCE ${CMAKE_CURRENT_SOURCE_DIR}/Main.c)
LIST(REMOVE_ITEM SOURCE ${CMAKE_CURRENT_SOURCE_DIR}/main.c)
ADD_COMPILE_OPTIONS("-Wall")
ADD_COMPILE_OPTIONS("-Werror")
ADD_LIBRARY(training ${SOURCE})
TARGET_INCLUDE_DIRECTORIES(training PUBLIC "${INCLUDE}")